hero animation overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ p {
 }
 @media screen and (min-width: 768px) {
   h1 {
-    font-size: 4rem;
+    font-size: 3.75rem;
   }
   h2 {
     font-size: 2.5rem;
@@ -518,7 +518,7 @@ header {
 
 @media screen and (min-width: 768px) {
   #my-name {
-    width: 520px;
+    width: 500px;
   }
 }
 @media screen and (max-width: 395px) {
@@ -549,10 +549,10 @@ header {
   }
 }
 
-@media screen and (min-width: 976px) {
+@media screen and (min-width: 992px) {
   .banner-container {
     grid-template-columns: 1fr auto;
-    gap: 7rem;
+    gap: 5rem;
     align-items: center;
   }
   .hero-img {
